--- a/src/public/index.html
+++ b/src/public/index.html
@@ -29,15 +29,13 @@
 	<!-- 2. Configure SystemJS -->
 	<script src="/systemjs.config.js"></script>
 	<script>
-      System.import('app').catch(function(err){ console.error(err); });
-    </script>
-	<script src="/socket.io/socket.io.js"></script>
-	<script>
-		var socket = io('http://localhost:3000');
-		socket.emit('register', {name: "Blargh"}, function (resp) {
-			console.log("Response: ", resp);
-		});
+		System.import('app').catch(function(err){ console.error(err); });
 	</script>
+	<script>
+		// localStorage.debug = '*';
+		delete localStorage.debug;
+	</script>
+	<script src="/socket.io/socket.io.js"></script>
 	<!--<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
 </head>
 
