Formatting to look more like iMessage. All panels work. New Conversation button not wired up.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,22 +1,8 @@
 <html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<base href="/" />
-	<style>
-		html {
-			height: 100%;
-		}
-		
-		body {
-			height: 100%;
-			margin: 0;
-		}
-		
-		.clear {
-			clear: both;
-		}
-	</style>
-
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
@@ -36,7 +22,7 @@
 		delete localStorage.debug;
 	</script>
 	<script src="/socket.io/socket.io.js"></script>
-	<!--<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
+	<link rel="stylesheet" href="/styles/main.css" />
 </head>
 
 <body>
